# mxctl

./: LICENSE  README.md  pyproject.toml
docs/: mxctl.1
packaging/archlinux/: .gitignore  PKGBUILD
scripts/: gen_completions.py
src/mxctl/: __init__.py  api.py  cli.py  config.py  models.py  sorting.py
tests/: conftest.py  test_api.py  test_cli.py  test_completions.py  test_config.py  test_e2e.py  test_models.py  test_sorting.py
