[project]
name = "mxctl"
version = "0.1.0"
description = "CLI for managing MXroute email accounts, forwarders, and catch-all policies"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
mxctl = "mxctl.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-httpserver>=1.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mxctl"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
